fix: fix missing gap in member adding in edit-views for groups and operations

--- a/src/app/features/management/operation-management-view/edit-operation-view/edit-operation-view.component.scss
+++ b/src/app/features/management/operation-management-view/edit-operation-view/edit-operation-view.component.scss
@@ -8,6 +8,7 @@ form {
 .member-adding{
   display: flex;
   flex-direction: row;
+  gap: .6em;
   #parent * {
     margin-inside: 4rem;
   }
